Fix dropdowns visibility Add back the logo

--- a/www/style/footer.css
+++ b/www/style/footer.css
@@ -2,20 +2,6 @@
 FOOTER
 **/
 
-
-* {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-  }
-  
-  
-  html,
-  body {
-    width: 100%;
-    height: 100%;
-  }
-  
   footer {
     width: 100%;
     background-color: #363636;
@@ -46,25 +32,25 @@ FOOTER
     padding: 20px 50px;
   }
   
-  section>h4 {
+  footer section>h4 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     font-size: 18px;
     margin-bottom: 10px;
   }
   
-  a {
+  footer a {
     display: block;
     text-decoration: none;
     color: white;
   }
   
   @media only screen and (min-width: 768px) {
-    section {
+    footer section {
       flex-flow: row nowrap;
     }
   
-    article {
+    footer article {
       margin: 10px 10px;
       background-color: darkgrey;
     }
